src/test/ui/type-alias/issue-62305-self-assoc-ty.stderr
error[E0433]: failed to resolve: use of undeclared type `Self`
  --> $DIR/issue-62305-self-assoc-ty.rs:1:14
   |
LL | type Alias = Self::Target;
   |              ^^^^ use of undeclared type `Self`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0433`.
